Fixed home page spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: var(--mantine-spacing-xl);
+  margin-top: var(--mantine-spacing-xl);
   padding-bottom: var(--mantine-spacing-xl);
   background-color: var(--mantine-color-body);
 }
